name:                euler
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              timothy
maintainer:          i@timothyklim.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8

executable euler.hs
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base ==4.5.*